[CSS Grid Layout] Grid item's logical height is not properly recomputed after -webkit-grid-column / -webkit-grid-row changes https://bugs.webkit.org/show_bug.cgi?id=108975

Reviewed by Tony Chang.

Source/WebCore:

Test: fast/css-grid-layout/implicit-position-dynamic-change.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::clearContainingBlockOverrideSize):
(WebCore::RenderBox::clearOverrideContainingBlockContentLogicalHeight):
* rendering/RenderBox.h:
Added clearOverrideContainingBlockContentLogicalHeight and updated clearContainingBlockOverrideSize
to use it.

* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::minContentForChild):
(WebCore::RenderGrid::maxContentForChild):
Added missing clearContainingBlockOverrideSize to ensure we don't use a previous layout's override.

LayoutTests:

* fast/css-grid-layout/implicit-position-dynamic-change-expected.txt: Added.
* fast/css-grid-layout/implicit-position-dynamic-change.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@141963 bbb929c8-8fbe-4397-9dbb-9b2b20218538